@@ -31,6 +31,7 @@ depth: 1
  * Update Eslint, Prettier & Jest npm packages (LB (Ben) Johnston)
  * Add npm scripts for TypeScript checks and formatting SCSS files (LB (Ben) Johnston)
  * Run tests in parallel in some of the CI setup (Sage Abdullah)
+ * Remove unused WorkflowStatus view, urlpattern, and workflow-status.js (Storm Heg)
 
 
 ## Upgrade considerations - changes affecting all projects
