@@ -25,5 +25,4 @@
 <script src="{% versioned_static 'wagtailadmin/js/vendor/xregexp.min.js' %}"></script>
 <script src="{% versioned_static 'wagtailadmin/js/vendor/urlify.js' %}"></script>
 <script src="{% versioned_static 'wagtailadmin/js/workflow-action.js' %}"></script>
-<script src="{% versioned_static 'wagtailadmin/js/workflow-status.js' %}"></script>
 {% hook_output 'insert_editor_js' %}
