@@ -214,42 +214,6 @@ class ConfirmWorkflowCancellation(BaseObjectMixin, View):
         }
 
 
-class WorkflowStatus(BaseObjectMixin, View):
-    workflow_history_url_name = None
-    revisions_compare_url_name = None
-
-    def setup(self, request, *args, **kwargs):
-        super().setup(request, *args, **kwargs)
-        self.workflow_state = self.object.current_workflow_state
-
-    def dispatch(self, request, *args, **kwargs):
-        if not self.workflow_state:
-            raise PermissionDenied
-        return super().dispatch(request, *args, **kwargs)
-
-    def get_workflow_history_url(self):
-        return reverse(self.workflow_history_url_name, args=(quote(self.object.pk),))
-
-    def get(self, request, *args, **kwargs):
-        return render_modal_workflow(
-            request,
-            "wagtailadmin/workflows/workflow_status.html",
-            None,
-            self.get_context_data(),
-        )
-
-    def get_context_data(self, **kwargs):
-        return {
-            "object": self.object,
-            "workflow_state": self.workflow_state,
-            "current_task_state": self.workflow_state.current_task_state,
-            "workflow_tasks": self.workflow_state.all_tasks_with_state(),
-            "workflow_history_url": self.get_workflow_history_url(),
-            "revisions_compare_url_name": self.revisions_compare_url_name,
-            **kwargs,
-        }
-
-
 class PreviewRevisionForTask(BaseObjectMixin, View):
     def setup(self, request, *args, task_id, **kwargs):
         super().setup(request, *args, **kwargs)
